--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "puppeteer-extra": "^3.1.18",
     "puppeteer-extra-plugin-stealth": "^2.7.8",
     "random-useragent": "^0.5.0",
-    "@types/puppeteer": "5.4.3",
+    "@types/puppeteer": "5.4.3"
   },
   "keywords": [
     "scraper",
